# Local-LLM-Agent-Orchestrator

./: .gitignore  README.md  download_model.bat  download_model.sh  main.py  memory.db  pyproject.toml  requirements.txt  setup_graphrag.py  version.py
examples/: memory_demo.py
scripts/: download_model.py
src/: exceptions.py  interfaces.py  llm_wrapper.py  models.py
src/agents/: agent_template.py  base_agent.py  code_rag_agent.py  graph_rag_agent.py  memory_base_agent.py  rag_agent.py  summary_agent.py  web_scraping_agent.py
src/api/: main.py
src/cli/: graph_rag_cli.py  main.py
src/data/: document_processor.py  graph_expansion.py  llm_reranker.py  milvus_store.py  triplet_extractor.py
src/llm/: local_llm.py
src/memory/: __init__.py  memory_manager.py  memory_models.py  memory_store.py  sqlite_memory_store.py
src/monitoring/: __init__.py  agent_monitor.py
src/orchestrator/: agent_factory.py  app.py  graph_app.py  orchestrator.py
tests/: test_memory_system.py
