[project]
name = "local-llm-agent-orchestrator"
version = "0.1.0"
description = "Local LLM Agent Orchestrator with RAG and Multi-Agent capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.11.0",
    "sentence-transformers>=2.5.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "ctransformers>=0.2.27",
    "openai>=1.88.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
llm-agent = "src.cli.main:app"
download-model = "scripts.download_model:app"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
