[project]
name = "local-llm-agent-orchestrator"
version = "0.1.0"
description = "Local LLM Agent Orchestrator with RAG and Multi-Agent capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.24",
    "numpy>=2.1.3",
    "openai>=1.88.0",
    "pydantic>=2.11.7",
    "pymilvus>=2.5.11",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
    "typer[all]>=0.16.0",
    "uvicorn[standard]>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
llm-agent = "src.cli.main:app"
graph-rag = "src.cli.graph_rag_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.metadata]
allow-direct-references = true
